[gd_scene load_steps=13 format=2]

[ext_resource path="res://Menu/Help/HelpMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/Resources/menu-background.png" type="Texture" id=2]
[ext_resource path="res://Menu/Help/control-unpressed.png" type="Texture" id=3]
[ext_resource path="res://Menu/Help/control-pressed.png" type="Texture" id=4]
[ext_resource path="res://Menu/Help/guide-unpressed.png" type="Texture" id=5]
[ext_resource path="res://Menu/Help/guide-pressed.png" type="Texture" id=6]
[ext_resource path="res://Menu/Help/story-unpressed.png" type="Texture" id=7]
[ext_resource path="res://Menu/Help/story-pressed.png" type="Texture" id=8]
[ext_resource path="res://Menu/Resources/back-unpressed.png" type="Texture" id=9]
[ext_resource path="res://Menu/Resources/back-pressed.png" type="Texture" id=10]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Menu/Resources/fredoka-one.ttf"

[sub_resource type="DynamicFont" id=2]
size = 130
outline_size = 5
outline_color = Color( 1, 0.454902, 0.454902, 1 )
font_data = SubResource( 1 )

[node name="HelpMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -720.5
margin_top = -473.5
margin_right = 720.5
margin_bottom = 473.5
rect_pivot_offset = Vector2( -330, 210 )
texture = ExtResource( 2 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1441, 947 )

[node name="Label" type="Label" parent="Background/VBoxContainer"]
margin_right = 1441.0
margin_bottom = 158.0
rect_min_size = Vector2( 1440, 158 )
custom_fonts/font = SubResource( 2 )
text = "HELP"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer"]
margin_top = 162.0
margin_right = 1441.0
margin_bottom = 882.0
rect_min_size = Vector2( 0, 720 )
custom_constants/separation = 30
alignment = 2

[node name="ControlButton" type="TextureButton" parent="Background/VBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 1441.0
margin_bottom = 180.0
rect_min_size = Vector2( 450, 150 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 3

[node name="Guidebutton" type="TextureButton" parent="Background/VBoxContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 1441.0
margin_bottom = 360.0
rect_min_size = Vector2( 450, 150 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="StoryButton" type="TextureButton" parent="Background/VBoxContainer/VBoxContainer"]
margin_top = 390.0
margin_right = 1441.0
margin_bottom = 540.0
rect_min_size = Vector2( 450, 150 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="BackButton" type="TextureButton" parent="Background/VBoxContainer/VBoxContainer"]
margin_top = 570.0
margin_right = 1441.0
margin_bottom = 720.0
rect_min_size = Vector2( 450, 150 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
expand = true
stretch_mode = 3

[connection signal="pressed" from="Background/VBoxContainer/VBoxContainer/ControlButton" to="." method="_on_ControlButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/VBoxContainer/Guidebutton" to="." method="_on_Guidebutton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/VBoxContainer/StoryButton" to="." method="_on_StoryButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
